<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="extra_passee">Paramètre de la MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_music">MusicActivity</string>
    // Vue MusicActivity
    <string name="activity_name_musicActivity">My Music</string>
    <string name="titre_musicActivity">Add/Edit music</string>
    <string name="hint_titre_musicActivity">Title</string>
    <string name="categorie_musicActivity">Categories</string>
    <string name="hint_categorie_musicActivity">Choose Category</string>
    <string name="hint_dscritption_musicActivity">Description</string>
    <string name="ok_musicActivity">Ok</string>
    <string name="cancel_musicActivity">Cancel</string>
    <string name="like_musicActivity">Like</string>
    <string name="unlike_musicActivity">Unlike</string>
    <string name="title_activity_list_view_eleve">ListViewEleveActivity</string>
    // Vue liste d'élève
    <string name="hint_nom_eleve">Nom</string>
    <string name="hint_prenom_eleve">Prenom</string>
    <string name="BoutonAjoutEleve">Ajouter</string>
    <string name="title_activity_two_pane">TwoPaneActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    // Fragment Détail
    <string name="fr_det_nom">Nom</string>
    <string name="fr_det_prenom">Prenom</string>
    // Service Localisation
    <string name="stop_serv_loc">Stop</string>
    <string name="launch_serv_loc">Start</string>

    // Dialog d'attente
    <string name="loading">Veuillez patientez&#8230;</string>
    <string name="ok">OK</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>

</resources>
