<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mistra.myapplication.ListViewEleveActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/nom_eleve_form"
            android:hint="@string/hint_nom_eleve"
            android:height="1dp"
            android:width="80dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/prenom_eleve_form"
            android:hint="@string/hint_prenom_eleve"
            android:width="80dp"
            android:height="1dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/sexe_eleve_form"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="H"
                android:id="@+id/radioButton3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="F"
                android:id="@+id/radioButton4" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BoutonAjoutEleve"
            android:id="@+id/AjoutEleveBouton"
            android:height="1dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/linearLayout">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewEleve" />
    </LinearLayout>

</RelativeLayout>
